<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".View.AparelhoActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/nomeaparelho"
        android:id="@+id/nomeaparelho"
        android:textColor="@android:color/holo_blue_dark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNome"
        android:hint="Digite um nome para o aparelho"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/marca"
        android:id="@+id/marca"
        android:textColor="@android:color/holo_blue_dark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMarca"
        android:hint="Digite a marca do equipamento"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/consumo"
        android:id="@+id/consumo"
        android:textColor="@android:color/holo_blue_dark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPotencia"
        android:inputType="number"
        android:ems="10"
        android:hint="Digite a potência do equip. (Kw/h)"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnInserirA"
        android:id="@+id/buttonInserirAparelho"
        android:onClick="inserirEquipamento"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
